# Attention_LSTM

./: .gitattributes  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
Data/: Spam_Classifier.pth  spam_fasttext_gensim.model  spam_fasttext_gensim.model.wv.vectors_ngrams.npy  vocab.json
Data/spam_classifier_model/: model.safetensors
Notebook/: Attention.ipynb  Baseline.ipynb  BiLSTM.ipynb  DistilBert.ipynb  Fast_Text.ipynb
benchmark/: benchmark.py
pipeline/: inference_pipeline.py  training_pipeline.py
src/: Attention.py  BiLSTM.py  Data_Preprocessing.py  embedding.py  vocab.py
tests/: inference_speed.py
