[project]
name = "attention-spam-ham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "gensim>=4.4.0",
    "gradio>=6.5.1",
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
